--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-server.port=8082
+server.port=8081
 spring.application.name=patient-service
 
-# Doctor Service Configuration
+# Doctor & Appointment Service URLs
 doctor.service.url=http://localhost:8082
+appointment.service.url=http://localhost:8083
 
-# MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/patientdb
+# MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/patientdb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Root
 
-# JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
